MFH: Fixed bug #47422 (modulus operator returns incorrect results on 64 bit linux)